--- a/Html/Index.html
+++ b/Html/Index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     praveen
-    <h1>hello this is my first html</h1>
+    <h1>hello this is my first html one</h1>
 </body>
 </html>
