--- a/Html/Index.html
+++ b/Html/Index.html
@@ -8,6 +8,7 @@
 <body>
     praveen
     <h1>hello this is my first html one</h1>
-    <h2>hello this is my first html one</h2>
+    <h2>welcom to html</h2>
+    <h3>Im praveen</h3>
 </body>
 </html>
